# hikorobo2026_control_server

./: .env.example  .gitignore  README.md  pyproject.toml  server_stderr.txt  server_stdout.txt
src/hikorobo2026_control_server/: __init__.py  __main__.py  api.py  config.py  csv_logger.py  main.py  mavlink_bridge.py  state.py
src/hikorobo2026_control_server/static/: index.html
